tambahan header dan footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <h1>Home</h1>
+    <header>Header ini</header>
     <p>Welcome to the home page.</p>
     <p><a href="about.php">About</a></p>
+    <footer>Ini footer</footer>
 </html>
